# weather_project

./: Pipfile  pyproject.toml
weather_project/: db.sqlite3
weather_project/forecast/: views.py
weather_project/forecast/static/css/: styles.css
weather_project/forecast/static/js/: main.js
weather_project/forecast/templates/: weather.html
weather_project/weather_project/: settings.py
