[project]
name = "weather_project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "trungd", email = "tranquoctrung6a8@gmail.com"},
]
dependencies = ["requests>=2.32.3", "xgboost>=3.0.1", "pandas>=2.2.3", "numpy>=2.1.3", "scikit-learn>=1.6.1", "scipy>=1.15.3", "seaborn>=0.13.2", "matplotlib>=3.10.3", "tensorflow>=2.19.0", "pytz>=2025.2", "joblib>=1.5.0", "django>=5.2.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "python ./weather_project/manage.py runserver 0.0.0.0:80"
migrate = "python ./weather_project/manage.py migrate"
dev = "python ./weather_project/manage.py runserver"
[tool.pdm]
distribution = false
